--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
                 <!-- 3x4 Photo  -->
 
-        <img src="images/Sholpan.jpeg" alt="" class="u-image u-image-circle u-image-1" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0">
+        <img src="images/nazguk.jpg" alt="" class="u-image u-image-circle u-image-1" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0">
         <h2 class="u-custom-font u-font-montserrat u-text u-text-1" data-animation-name="fadeIn" data-animation-duration="1000"
         data-animation-delay="0" data-animation-direction="">Конарбай &nbsp;<br>Шолпан
         </h2>
         <h4 class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-custom-font u-font-montserrat u-text u-text-grey-5 u-text-2" data-animation-name="fadeIn" data-animation-duration="1000"
-         data-animation-delay="0" data-animation-direction="">Этаж: 5<br>Квартира: 20<br>Комната: 1
+         data-animation-delay="0" data-animation-direction="">Этаж: 5<br>Квартира: 20<br>Комната: 2
         </h4>
         <p class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-small-text u-text u-text-font u-text-grey-70 u-text-variant u-text-3">
           <a href="https://www.instagram.com/midastrash/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-font-montserrat u-hover-none u-none u-text-custom-color-1 u-text-hover-palette-1-base u-btn-1" target="_blank">@midastrash&nbsp;</a>
