--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
                 <!-- 3x4 Photo  -->
 
-        <img src="images/nazguk.jpg" alt="" class="u-image u-image-circle u-image-1" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0">
+        <img src="nazgul.jpg" alt="" class="u-image u-image-circle u-image-1" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0">
         <h2 class="u-custom-font u-font-montserrat u-text u-text-1" data-animation-name="fadeIn" data-animation-duration="1000"
-        data-animation-delay="0" data-animation-direction="">Конарбай &nbsp;<br>Шолпан
+        data-animation-delay="0" data-animation-direction="">Гайниева &nbsp;<br>Назгуль
         </h2>
         <h4 class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-custom-font u-font-montserrat u-text u-text-grey-5 u-text-2" data-animation-name="fadeIn" data-animation-duration="1000"
          data-animation-delay="0" data-animation-direction="">Этаж: 5<br>Квартира: 20<br>Комната: 2
